# mod-ansible-autodoc

./: .gitignore  .gitlab-ci.yml  README.md  Taskfile.yml  package.json  package.json.liquid  pnpm-lock.yaml  pyproject.toml  pyproject.toml.liquid  setup.cfg  setup.py
.config/: Dockerfile  codeclimate.yml  package-lock.json  requirements.txt  variables.json
.config/brew/: binary.rb
.config/docs/: Taskfile.yml  blueprint-contributing.md  blueprint-readme-cli.md  package.json  pyproject.toml  variables.json
.config/docs/local/: package-lock.json
.config/docs/readme/: subheader.md
.config/taskfiles/install/: Taskfile.yml
.devcontainer/: devcontainer.json
docs/: CONTRIBUTING.md
docs/partials/: guide.md
local/: install.sh  package-lock.json  requirements.txt
local/slim/: exe.txt  install.txt
mod_ansible_autodoc/: commands.py
mod_ansible_autodoc/args/: args.py
mod_ansible_autodoc/markdown/: format.py  parse.py  todo.py
src/: __init__.py
src/cli/: click.py  fire.py
src/dates/: arrow.py
src/debugging/: snooper.py
src/errors/: better_exceptions.py
src/loggers/: rich.py
src/network/: aiohttp.py  furl.py  requests.py
src/profilers/: instrument.py
src/scheduler/: schedule.py
src/unix/: sh.py
src/validations/: schema.py
src/workers/: celery.py
