[tool.poetry]
name = "python-mod-ansible-autodoc"
version = "1.0.0"
description = "Generate documentation from comments in Ansible YML files"
authors = ["Brian Zalewski <brian@megabyte.space>"]
license = "MIT"
readme = "README.md"
homepage = "https://megabyte.space"
documentation = "https://megabyte.space/docs/python/library"
keywords = ["advanced", "automation", "bandit", "beginner", "boilerplate", "cli", "easy", "gitlab-ci", "go", "go-lang", "golang", "mblabs", "megabytelabs", "poetry", "professormanhattan", "pytest", "python", "terminal", "washingtondc"]
include = ["CHANGELOG.md", "LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Environment :: Web Environment",
  "Framework :: aiohttp",
  "Framework :: Celery",
  "Framework :: Flake8",
  "Framework :: Pytest",
  "Framework :: Sphinx :: Extension",
  "Framework :: Sphinx :: Theme",
  "Framework :: Sphinx",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: JavaScript",
  "Programming Language :: Other Scripting Engines",
  "Programming Language :: Other",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Programming Language :: Unix Shell",
  "Topic :: Desktop Environment",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Documentation",
  "Topic :: Internet",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
aiohttp = "^3.7.4"
arrow = "^1.1.1"
better-exceptions = "^0.3.3"
celery = "^5.1.2"
click = "^8.0.3"
fire = "^0.4.0"
furl = "^2.1.2"
requests = "^2.26.0"
rich = "^10.9.0"
schedule = "^1.1.0"
schema = "^0.7.4"
sh = "^1.14.2"
Sphinx = "^4.1.2"
sphinx-press-theme = "^0.8.0"

# semantic extras -> `poetry install -E semantic`
pip = { version = "^21.3.0", optional = true }
setuptools = { version = "^58.2.0", optional = true }
twine = { version = "^3.8.0", optional = true }
wheel = { version = "^0.37.1", optional = true }

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.8b0"
blocklint = "^0.2.3"
flake8 = "^3.9.2"
homebrew-pypi-poet = "^0.10.0"
pre-commit-hooks = "^4.0.1"
proselint = "^0.12.0"
pyinstaller = "^4.6"
pyinstrument = "^4.0.3"
pylint = "^2.10.2"
PySnooper = "^1.0.0"
pytest = "^6.2.5"
yamllint = "^1.26.3"

[tool.poetry.extras]
semantic = [
  "pip",
  "setuptools",
  "twine",
  "wheel"
]

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/megabyte-labs/python/cli/mod-ansible-autodoc/-/issues"
"GitHub" = "https://github.com/ProfessorManhattan/mod-ansible-autodoc"
"GitLab" = "https://gitlab.com/megabyte-labs/python/cli/mod-ansible-autodoc"
"Give Directly" = "https://givedirectly.org"
"Open Collective" = "https://opencollective.com/megabytelabs"
"Patreon" = "https://www.patreon.com/ProfessorManhattan"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
